node-main/deps/v8/test/message/fail/class-fields-private-undeclared-lazy-class.out
*%(basename)s:9: SyntaxError: Private field '#foo' must be declared in an enclosing class
        x = this.#foo;
                ^
SyntaxError: Private field '#foo' must be declared in an enclosing class